--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -516,6 +516,8 @@ Command Format and Example: +
 
 {empty} +
 
+// tag:notification[]
+// tag:chenggengppp[]
 === Notification System
 Horo will post notifications to your system tray to remind you that an event is starting or that a task is due.
 
@@ -561,6 +563,7 @@ image::NotificationOnCommandBoxScreenShot.png[]
 image::NotificationOnFeedbackScreenShot.png[]
 
 {empty} +
+// end:chenggengppp[]
 
 ==== Switch notifications off
 The `notif_off` command switches notifications off. +
@@ -581,6 +584,7 @@ image::NotificationOffCommandBoxScreenShot.png[]
 image::NotificationOffFeedbackScreenShot.png[]
 
 {empty} +
+// end:notification[]
 
 === Undo-Redo
 The following commands allow you to undo and redo previously input commands.
