--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -698,10 +698,13 @@ These instructions only provide a starting point for testers to work on; testers
 .. Double-click the jar file +
   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
 
-. Saving window preferences
+=== Notification System
 
-.. Resize the window to an optimum size. Move the window to a different location. Close the window.
-.. Re-launch the app by double-clicking the jar file. +
-  Expected: The most recent window size and location is retained.
+. Posting notifications to the desktop
+.. Prereqisites: Make sure notifications have been switched on by using the `notif_on` command. +
+                 Make sure the System Tray is supported.
+.. Test case: `add_event "Test Event" "[CURRENT DATE] [CURRENT TIME INCREMENTED BY ONE MINUTE]"` +
+   Expected: Upon the next minute, a notification should be posted to your desktop through the system tray.
+.. Test case: `add_task "Test Task" --due "[CURRENT DATE] [CURRENT TIME INCREMENTED BY ONE MINUTE]"`
+   Expected: Upon the next minute, a notification should be posted to your desktop through the system tray.
 
-_{ more test cases ... }_
